switched project to Java 8, added levels file, support for new models, started adding support for level loading